<resources>
    <string name="app_name">The Gyms</string>
    <string name="title_home">Home</string>
    <string name="title_account">Mój Profil</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Powiadomienie</string>
    <string name="title_activity_login">Zaloguj się</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Hasło</string>
    <string name="action_sign_in">Witaj</string>
    <string name="action_sign_in_short">Zaloguj się</string>
    <string name="welcome">"Witaj!"</string>
    <string name="invalid_username">Nie poprawna nazwa użytkownika</string>
    <string name="invalid_password">Hasło musi być dłuższe niż 5 znaków</string>
    <string name="login_failed">"Logowanie nie powiodło się"</string>
    <string name="Sign_up">Zarejestruj się</string>
    <string name="Phone">Telefon</string>
    <string name="Name">Nazwa użytkownika</string>
    <string name="User">Użytkownikr</string>
    <string name="Company">Nazwa przedsiębiorstwa</string>
    <string name="Address">Adres</string>
    <string name="CompanyName">Nazwa przedsiębiorstwa</string>
    <string name="sign_out">Wyloguj się</string>
    <string name="City">Miasto</string>
    <string name="Street">Ulica</string>
    <string name="Number">Numer</string>
    <string name="Price">Cena</string>
    <string name="Chosse">Podaj swoje oferty</string>
    <string name="Fitness">Fitness</string>
    <string name="Gym"> Przesiębiorca</string>
    <string name="BodyShape">Body Shape</string>
    <string name="Boxing">Boxing</string>
    <string name="TBC">TBC</string>
    <string name="BodyStep">Body Step</string>
    <string name="Zumba">Zumba</string>
    <string name="ZumbaKids">Zumba Kids</string>
    <string name="Add_photo">Dodaj zdjęcia</string>
    <string name="Buy">Kup</string>
    <string name="Choose">Wybierz</string>
    <string name="zl">zł</string>
    <string name="ul">ul.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="brief_description">Opis</string>
    <string name="add">Dodaj</string>
    <string name="submit">Zatwierdź</string>
    <string name="post_desc">Podziel się z nami swoimi odczuciami</string>
    <string name="fitness_name"> Nazwa fitness</string>
    <string name="training_day">Dzień treningu</string>
    <string name="hour">Godzina</string>
    <string name="fitnes_price">Cena / open</string>
    <string name="next_step">Dalej</string>
    <string name="monday">Poniedziałek</string>
    <string name="tuesday">Wtorek</string>
    <string name="wednesday">Środa</string>
    <string name="thursday">Czwartek</string>
    <string name="friday">Piątek</string>
    <string name="saturday">Sobota</string>
    <string name="sunday">Niedziela</string>
    <string name="update">Aktualizuj</string>
    <string name="day_of_training">Dzień treningu</string>
    <string name="name">Nazwa</string>
    <string name="delete">Usuń</string>
    <string name="nip">NIP</string>
    <string name="email">Email</string>
    <string name="save">Zapisz</string>
    <string name="enter_your_notification">Dodaj powiadomienie</string>
    <string name="payment">Płatność</string>
    <string name="provide_prices_for_your_services">Podaj ceny swoich usług</string>
    <string name="add_service">Dodaj usługę</string>
    <string name="create_account">Zarejestruj się</string>
    <string name="service_details">Szczegóły usług</string>
    <string name="duration">Okres</string>
    <string name="type">Rodzaj</string>
    <string name="gym">Siłownia</string>
    <string name="concessionary">Ulgowy</string>
    <string name="normal">Normalny</string>
    <string name="slash_mark">/</string>
    <string name="your_opinion">Twoja opinia</string>
    <string name="our_services">Nasze usługi</string>
    <string name="carnet_desc">Wybierz karnet. Karnet będzie aktywowany z dniem przybycia na siłownie</string>
    <string name="join">Dołącz</string>
    <string name="search">Szukaj</string>
    <string name="order_by_price">Sortuj </string>
    <string name="ascending">Rosnąco</string>
    <string name="descending">Malejąco</string>
    <string name="fitness">Fitness</string>
    <string name="location">Lokalizacja</string>
    <string name="validate_your_data">Potwierdź poprawność danych</string>
    <string name="opening_hours">Godziny otwarcia</string>
    <string name="comments">Komentarze</string>
    <string name="general_information">Informacje ogólne</string>
    <string name="user">Użytkownik</string>
    <string name="open">Otwarcie:</string>
    <string name="close">Zamlnięcie:</string>
    <string name="set_a_timetable">Dodaj twoje uslugi</string>
    <string name="gallery">Galeria</string>
    <string name="about">Informacje ogólne</string>
    <string name="add_new_services">Dodaj nowe usługi</string>
    <string name="pln_month">zł/miesiąc</string>
    <string name="members">Członkowie</string>
    <string name="member">Uczestnik</string>
    <string name="fitnessLeader">Prowadzący</string>
    <string name="start_day">Wybierz dzień rozpoczęcia karnetu</string>
    <string name="start_date">Data rozpoczęcia</string>
    <string name="entries">Ilość wejść</string>
    <string name="ticket_type">Rodzaj biletu</string>
    <string name="sport_type_ticket">Rodzaj obiektu</string>
    <string name="gym_memebrship">Karnety</string>
    <string name="gym_name">Nazwa obiektu</string>


    <!-- SPINNER STRING-ARRAY-->
    <string-array name="entries_array">
        <item>Open</item>
        <item>4</item>
        <item>6</item>
        <item>8</item>
        <item>10</item>
        <item>12</item>
        <item>14</item>
        <item>16</item>
    </string-array>
    <!-- <string name="app_name">MyEgineerApplication</string>
    <string name="title_home">Home</string>
    <string name="title_account">Account</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="Sign_up">Create new account</string>
    <string name="Phone">Phone</string>
    <string name="Name">User Name</string>
    <string name="User">User</string>
    <string name="Company">Company</string>
    <string name="Address">Address</string>
    <string name="CompanyName">Company name</string>
    <string name="sign_out">Sign out</string>
    <string name="City">City</string>
    <string name="Street">Street</string>
    <string name="Number">Number</string>
    <string name="Price">Price</string>
    <string name="Chosse">Chosse what you offer</string>
    <string name="Fitness">Fitness</string>
    <string name="Gym"> Silownia</string>
    <string name="BodyShape">Body Shape</string>
    <string name="Boxing">Boxing</string>
    <string name="TBC">TBC</string>
    <string name="BodyStep">Body Step</string>
    <string name="Zumba">Zumba</string>
    <string name="ZumbaKids">Zumba Kids</string>
    <string name="Add_photo">Upload images</string>
    <string name="Buy">Buy</string>
    <string name="Choose">Choose</string>
    <string name="zl">pln</string>
    <string name="ul">ul.</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="brief_description">Brief Description</string>
    <string name="add">Add</string>
    <string name="submit">Submit</string>
    <string name="post_desc">Add comment. Say us what you think about service, feelings</string>
    <string name="fitness_name">Fitness name</string>
    <string name="training_day">Training day</string>
    <string name="hour">Hour</string>
    <string name="fitnes_price">Price per month / open</string>
    <string name="next_step">Next step</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="update">Update</string>
    <string name="day_of_training">Day of training</string>
    <string name="name">Name</string>
    <string name="delete">Delete</string>
    <string name="nip">NIP</string>
    <string name="email">Email</string>
    <string name="save">Save</string>
    <string name="enter_your_notification">Enter your notification</string>
    <string name="payment">Payment</string>
    <string name="provide_prices_for_your_services">Provide prices for your services</string>
    <string name="add_service">Add service</string>
    <string name="create_account">Create account</string>
    <string name="service_details">Service details</string>
    <string name="duration">Duration</string>
    <string name="type">Type</string>
    <string name="gym">Gym</string>
    <string name="concessionary">Ulgowy</string>
    <string name="normal">Normalny</string>
    <string name="slash_mark">/</string>
    <string name="your_opinion">Your opinion</string>
    <string name="our_services">Nasze usługi</string>
    <string name="carnet_desc">Wybierz karnet. Karnet będzie aktywowany z dniem przybycia na siłownie</string>
    <string name="join">Join</string>
    <string name="search">Search</string>
    <string name="order_by_price">Order by price</string>
    <string name="ascending">Ascending</string>
    <string name="descending">Descending</string>
    <string name="fitness">Fitness</string>
    <string name="location">Location</string>
    <string name="validate_your_data">Validate your data</string>
    <string name="opening_hours">Opening hours</string>
    <string name="comments">Comments</string>
    <string name="general_information">General information</string>
    <string name="user">Użytkownik</string>
    -->
</resources>
