<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/darkGrey"
    android:gravity="center"
    tools:context=".company_panel.FitnessDayDivision">
    <Button
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_margin="5dp"
        android:text="@string/monday"
        android:textColor="@color/white"
        android:id="@+id/fitness_week_division_monday_btn"
        android:background="@color/grey"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_margin="5dp"
        android:text="@string/tuesday"
        android:textColor="@color/white"
        android:id="@+id/fitness_week_division_tuesday_btn"
        android:background="@color/grey"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_margin="5dp"
        android:text="@string/wednesday"
        android:textColor="@color/white"
        android:id="@+id/fitness_week_division_wednesday_btn"
        android:background="@color/grey"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_margin="5dp"
        android:text="@string/thursday"
        android:textColor="@color/white"
        android:id="@+id/fitness_week_division_thursday_btn"
        android:background="@color/grey"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_margin="5dp"
        android:text="@string/friday"
        android:textColor="@color/white"
        android:id="@+id/fitness_week_division_friday_btn"
        android:background="@color/grey"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_margin="5dp"
        android:text="@string/saturday"
        android:textColor="@color/white"
        android:id="@+id/fitness_week_division_saturday_btn"
        android:background="@color/grey"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_margin="5dp"
        android:text="@string/sunday"
        android:textColor="@color/white"
        android:id="@+id/fitness_week_division_sunday_btn"
        android:background="@color/grey"/>
</LinearLayout>