<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/darkGrey"
    tools:context=".accounts.ui.CreateGymAccount">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:padding="10dp"
            android:orientation="vertical"
            android:id="@+id/form">
            <TextView
                android:id="@+id/id_text_view"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/grey"
                android:textColor="@color/white"
                android:visibility="invisible"
                android:layout_marginBottom="5px"
                android:paddingLeft="10dp"/>
            <EditText
                android:id="@+id/company_edit_text"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/edit_text_style"
                android:hint="@string/CompanyName"
                android:inputType="text"
                android:layout_marginBottom="5px"
                android:paddingLeft="10dp"/>

            <EditText
                android:id="@+id/nip_edit_text"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/edit_text_style"
                android:hint="NIP"
                android:inputType="number"
                android:layout_marginBottom="5px"
                android:paddingLeft="10dp"/>

            <EditText
                android:id="@+id/email_edit_text"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/edit_text_style"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:layout_marginBottom="5px"
                android:paddingLeft="10dp"/>
            <EditText
                android:id="@+id/password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/edit_text_style"
                android:hint="@string/prompt_password"
                android:inputType="textPassword"
                android:layout_marginBottom="5px"
                android:paddingLeft="10dp"/>
            <EditText
                android:id="@+id/city_edit_text"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/edit_text_style"
                android:hint="@string/City"
                android:inputType="textPostalAddress"
                android:layout_marginBottom="5px"
                android:paddingLeft="10dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="5px">

                <EditText
                    android:id="@+id/street_edit_text"
                    android:layout_width="260dp"
                    android:layout_height="50dp"
                    android:background="@drawable/edit_text_style"
                    android:hint="@string/Street"
                    android:inputType="textPostalAddress"
                    android:layout_marginEnd="2dp"
                    android:paddingLeft="10dp"/>
                <EditText
                    android:id="@+id/number_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/edit_text_style"
                    android:hint="@string/Number"
                    android:inputType="textPostalAddress"
                    android:paddingLeft="10dp"/>
            </LinearLayout>

            <EditText
                android:id="@+id/phone_edit_text"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/edit_text_style"
                android:hint="@string/Phone"
                android:inputType="phone"
                android:layout_marginBottom="5px"
                android:paddingLeft="10dp"/>


            <EditText
                android:id="@+id/price_edit_text"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/edit_text_style"
                android:hint="@string/Price"
                android:inputType="number"
                android:paddingLeft="10dp"
                android:layout_marginBottom="5px"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/edit_text_style">
                <EditText
                    android:id="@+id/create_brief_description"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/edit_text_style"
                    android:hint="@string/brief_description"
                    android:inputType="textMultiLine"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:lines="6"/>

            </LinearLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/image_uploading"/>

            <Button
                android:id="@+id/gallery_image_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingLeft="50dp"
                android:paddingRight="50dp"
                android:layout_marginTop="30dp"
                android:textAllCaps="false"
                android:background="@drawable/button_border"
                android:text="@string/Add_photo"
                android:textColor="#ffffff" />

            <ProgressBar
                android:padding="15dp"
                android:progressBackgroundTint="@color/colorPrimary"
                android:layout_width="match_parent"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_height="wrap_content"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="0dp"
                android:id="@+id/addImgProgressBar"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/button_create_company"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_gravity="center"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="30dp"
                    android:textAllCaps="false"
                    android:background="@color/turquoise"
                    android:text="@string/next_step"
                    android:textColor="#ffffff" />
            </RelativeLayout>
        </LinearLayout>




</ScrollView>