<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fui_bgGitHub">

    <FrameLayout
        android:id="@+id/user_form"
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="horizontal">


        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/form">

            <EditText
                android:id="@+id/name_edit_text"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/edit_text_style"
                android:hint="@string/Name"
                android:inputType="text"
                android:paddingStart="10dp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="5px"
                 />

            <EditText
                android:id="@+id/email_edit_text"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/edit_text_style"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:paddingStart="10dp" />


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="5px" />


            <EditText
                android:id="@+id/phone_edit_text"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/edit_text_style"
                android:hint="@string/Phone"
                android:inputType="phone"
                android:paddingStart="10dp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="5px"
                 />

            <EditText
                android:id="@+id/password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/edit_text_style"
                android:hint="@string/prompt_password"
                android:inputType="textPassword"
                android:paddingStart="10dp" />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp">

                <Button
                    android:id="@+id/button_create_user"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_gravity="center"
                    android:textAllCaps="false"
                    android:layout_marginStart="50dp"
                    android:layout_marginEnd="50dp"
                    android:background="@drawable/button_style"
                    android:text="@string/Sign_up"
                    android:textColor="#ffffff" />
            </RelativeLayout>
        </LinearLayout>
    </FrameLayout>

</FrameLayout>